source/blender/gpu/intern/gpu_codegen.h
@@ -172,7 +172,9 @@ typedef struct GPUPass GPUPass;
 
 GPUPass *GPU_generate_pass(ListBase *nodes, struct GPUNodeLink *outlink,
                            struct GPUVertexAttribs *attribs, int *builtin,
-                           const GPUMatType type, const char *name, const bool use_opensubdiv);
+                           const GPUMatType type, const char *name,
+                           const bool use_opensubdiv,
+                           const bool use_new_shading);
 
 struct GPUShader *GPU_pass_shader(GPUPass *pass);
 
